# baobuibk-SpaceLiin_Satellite_M33_FW_1.1.0

./: .gitattributes  .gitignore
SRC/: tree.txt
SRC/01_DEV/M0_App/: CMakeLists.txt
SRC/01_DEV/M0_App/Boot/: boot_manager.c  boot_manager.h
SRC/01_DEV/M0_App/Config/: config.h  error_codes.h
SRC/01_DEV/M0_App/OS/Kernel/: rtos.c  rtos.h
SRC/01_DEV/M0_App/OS/Task/: rtos_tasks.c  rtos_tasks.h
SRC/01_DEV/M1_SysApp/: CMakeLists.txt
SRC/01_DEV/M1_SysApp/Interface/RemoteCall/: remote_call.c  remote_call.h
SRC/01_DEV/M1_SysApp/Interface/SimpleShell/: simple_shell.c  simple_shell.h
SRC/01_DEV/M1_SysApp/Services/: cmdline.c  cmdline.h
SRC/01_DEV/M1_SysApp/system_data/: command_list.c  m33_command.c  m33_command.h  m33_data.c  m33_data.h
SRC/01_DEV/M1_SysApp/task_experiment/: task_experiment.c  task_experiment.h
SRC/01_DEV/M1_SysApp/task_system_control/: task_system_control.c  task_system_control.h
SRC/01_DEV/M1_SysApp/task_temperature/: app_temperature.c  app_temperature.h
SRC/01_DEV/M1_SysApp/task_update_onboard_adc/: task_update_onboard_adc.c  task_update_onboard_adc.h
SRC/01_DEV/M2_BSP/: CMakeLists.txt  tree.txt
SRC/01_DEV/M2_BSP/bsp_board/: bsp.c  bsp.h  bsp_board.h
SRC/01_DEV/M2_BSP/bsp_core/: bsp_core.c  bsp_core.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_debug_console/: bsp_debug_console.c  bsp_debug_console.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_expander/: bsp_expander.c  bsp_expander.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_heater/: bsp_heater.c  bsp_heater.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_i2c_sensor/: bsp_i2c_sensor.c  bsp_i2c_sensor.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_laser/: bsp_laser.c  bsp_laser.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_libcsp_can/: bsp_libcsp_can.c  bsp_libcsp_can.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_onboard_adc/: bsp_onboard_adc.c  bsp_onboard_adc.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_photo/: bsp_photo.c  bsp_photo.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_power/: bsp_power.c  bsp_power.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_pump/: bsp_pump.c  bsp_pump.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_solenoid/: bsp_solenoid.c  bsp_solenoid.h
SRC/01_DEV/M2_BSP/bsp_peripheral/bsp_spi_sensor/: bsp_spi_sensor.c  bsp_spi_sensor.h
SRC/01_DEV/M2_BSP/remoteproc/: m33_remoteproc.c  m33_remoteproc.h  rsc_table.c  rsc_table.h
SRC/01_DEV/M2_BSP/rpmsg/: m33_rpmsg.c  m33_rpmsg.h
SRC/01_DEV/M3_Devices/: CMakeLists.txt
SRC/01_DEV/M3_Devices/components/delay/: delay.h
SRC/01_DEV/M3_Devices/components/dio/: do.h
SRC/01_DEV/M4_Middlewares/: CMakeLists.txt
SRC/01_DEV/M4_Middlewares/printf/: printf.c
SRC/01_DEV/M4_Middlewares/ring_buffer/: ring_buffer.c  ring_buffer.h
SRC/01_DEV/M4_Middlewares/ring_char_buffer/: ring_char_buffer.c  ring_char_buffer.h
SRC/01_DEV/M5_Utils/: CMakeLists.txt
SRC/01_DEV/M5_Utils/CRC/: crc16_xmodem.c  crc16_xmodem.h
SRC/01_DEV/M5_Utils/DateTime/: date_time.c  date_time.h
SRC/01_DEV/M5_Utils/lwl/: lwl.c  lwl.h  lwl_decode.py  lwl_decode_tutorial.html  lwl_table.c  module.h
SRC/01_DEV/M6_Tools/: CMakeLists.txt
SRC/01_DEV/M7_Tests/: CMakeLists.txt
SRC/Core/Inc/: MIMX9352cm33_it.h  main.h
SRC/Core/Src/: FreeRTOSConfig.h  MIMX9352cm33_it.c  main.c  pin_mux.c
SRC/Core/Startup/: startup_MIMX9352_cm33.S
SRC/armgcc/: CMakeLists.txt  MIMX9352_cm33_ram.ld  config.cmake  flags.cmake  mcux_include.json
SRC/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  output.map  payexp_m33.elf
SRC/armgcc/debug/.cmake/api/v1/reply/: cache-v2-3aac45bcc4a51ce43363.json  cache-v2-abc3f768847bdaa869c8.json  cmakeFiles-v1-b0996a3f73291543b0ea.json  cmakeFiles-v1-b22ca8b8e3a1dd2901e2.json  codemodel-v2-21061cdb028d7da6c92e.json  codemodel-v2-3c408e369f11056107c1.json  codemodel-v2-84fad2e08e427f7a5f1b.json  codemodel-v2-8588d4e17c998fa549a4.json  codemodel-v2-fc741fbb158b1c40eb34.json  codemodel-v2-ff04bf55a5d93dbf56fb.json  index-2025-10-25T21-30-31-0449.json  index-2025-10-26T08-21-21-0810.json  index-2025-10-27T06-26-57-0212.json  index-2025-10-27T08-11-09-0096.json  index-2025-10-27T11-20-50-0506.json  index-2025-10-27T15-51-53-0241.json  target-payexp_m33.elf-debug-0f4caf2e6635f50112b9.json  target-payexp_m33.elf-debug-7bbac3edeffb5c03b4d5.json  target-payexp_m33.elf-debug-8730e0a589e6d8db40ea.json  target-payexp_m33.elf-debug-9d88b6bb06370be3ed3f.json  target-payexp_m33.elf-debug-d306c1ba6af93d40c73c.json  target-payexp_m33.elf-debug-e2feb757679fdeebe58b.json  toolchains-v1-8a4d23a7445f3a9c5c7a.json  toolchains-v1-fd27c9c7b238b1cd647c.json
SRC/armgcc/debug/M0_App/: cmake_install.cmake
SRC/armgcc/debug/M1_SysApp/: cmake_install.cmake
SRC/armgcc/debug/M2_BSP/: cmake_install.cmake
SRC/armgcc/debug/M3_Devices/: cmake_install.cmake
SRC/armgcc/debug/M4_Middlewares/: cmake_install.cmake
SRC/armgcc/debug/M5_Utils/: cmake_install.cmake
SRC/armgcc/debug/M6_Tools/: cmake_install.cmake
SRC/armgcc/debug/M7_Tests/: cmake_install.cmake
SRC/armgcc/release/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  compile_commands.json  output.map  payexp_m33.elf
SRC/armgcc/release/.cmake/api/v1/reply/: cache-v2-b9951af3f70ef25a7545.json  cmakeFiles-v1-7754bb6bb8526d337db5.json  codemodel-v2-77b3580f06e438e93e6a.json  codemodel-v2-8f9bf8a474411046aa52.json  codemodel-v2-fd83797d5ec62bd10135.json  index-2025-10-26T13-45-28-0410.json  index-2025-10-27T02-45-45-0548.json  index-2025-10-27T15-53-26-0443.json  target-payexp_m33.elf-release-0a667acb5418e059e2c8.json  target-payexp_m33.elf-release-38089fa40e451bc5c920.json  target-payexp_m33.elf-release-5fc6b29998793899e151.json
SRC/cmake/: exp_sdk_common.cmake
armgcc/: CMakeLists.txt  MIMX9352_cm33_ram.ld  config.cmake
armgcc/debug/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  compile_commands.json  output.map
armgcc/debug/.cmake/api/v1/reply/: cache-v2-e4989e5dc090e5e3f864.json  cmakeFiles-v1-5555554e384760f6aa0a.json  codemodel-v2-7e2dcf2037daab03ab3b.json  index-2025-10-25T17-53-40-0618.json  target-freertos_hello.elf-debug-fb3bf1eefa46ad6ee3f2.json
(+58 files in other folders)
